<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_marginTop="10dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottom_sheet_top_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/takrorlanish_turi1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/once_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/once"
        android:textSize="30sp"
        android:textColor="#000"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />


    <TextView
        android:id="@+id/everyday_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/everyday"
        android:textSize="30sp"
        android:textColor="#000"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/week_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/week"
        android:textSize="30sp"
        android:textColor="#000"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="10dp"/>

</LinearLayout>